syntax = "proto3";

option csharp_namespace = "bestbuy_GRPC";

package greet;

service ProductRepo {
	rpc GetAllProducts (GetProductsRequest) returns (GetProductsReply);
}

message GetProductsRequest {
	int ProductID = 1;
	string Name = 2;
	double Price = 3;
	int CategoryID = 4;
	bool OnSale = 5;
	int StockLevel = 6;
}

message GetProductsReply {

}


service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
